--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
-﻿title: "RCL"
+﻿title: "RCL Docs"
 remote_theme: pmarsceill/just-the-docs
 color_scheme: "dark"
 search_enabled: true
 aux_links:
   "RCL Docs on GitHub":
-    - "https://github.com/rcl-letsencrypt-auto-ssl/docs"
+    - "https://github.com/rcl-ssl/docs"
