--- a/_config.yml
+++ b/_config.yml
@@ -5,5 +5,5 @@ search_enabled: true
 ga_tracking: G-R8D9K4GZVQ
 ga_tracking_anonymize_ip: true
 aux_links:
-  "RCL Docs on GitHub":
+  "RCL SSL Docs on GitHub":
     - "https://github.com/rcl-ssl/docs"
